--- a/Journal/invisible-blows.html
+++ b/Journal/invisible-blows.html
@@ -339,7 +339,7 @@
     </div>
 
     <h1>Invisible Blows</h1>
-    <p class="author">by [Your Full Name]</p>
+    <p class="author">by Tincu Alin Cristian Alexandru</p>
 
     <!-- PASTE YOUR ENTIRE STORY BELOW THIS LINE -->
     
